--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -124,6 +124,17 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           JOB_URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.job }}?check_suite_focus=true
 
+      - uses: octokit/request-action@v2.x
+        id: get-job-info
+        with:
+          route: GET /repos/{owner}/{repo}/actions/jobs/{job_id}
+          owner: mttschltz
+          repo: life
+          job_id: ${{ github.job }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: 'echo latest release: ${{ steps.get-job-info.outputs.data }}'
+
       - uses: actions/github-script@v5.0.0
         name: Get job duration
         id: get-job-duration
@@ -390,6 +401,25 @@ jobs:
     runs-on: ubuntu-latest
     needs: [static-unit, visual-reg, build]
     steps:
+      - uses: slackapi/slack-github-action@v1.16.0
+        name: Post starting to Slack
+        with:
+          channel-id: 'C01CTC53XGT' # #deploys-matt-fyi
+          payload: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "⏳ Starting deploy to Netlify..."
+                  }
+                },
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+
       - name: Download build files
         uses: actions/download-artifact@v2
         with:
