--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -417,6 +417,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [static-unit, visual-reg, build]
     outputs:
+      workflow-start-time: ${{ needs.static-unit.outputs.start-time }}
       start-time: ${{ steps.start-time.outputs.result }}
     steps:
       - uses: actions/checkout@v2
@@ -497,7 +498,7 @@ jobs:
         id: get-workflow-duration
         with:
           script: |
-            const started = new Date(${{ needs.static-unit.outputs.start-time }})
+            const started = new Date(${{ needs.deploy-prepare.outputs.workflow-start-time }})
             const completed = new Date()
             const durationSeconds = Math.floor((completed - started)/1000)
             if (durationSeconds > 60) {
